--- a/soprano-smm/index.html
+++ b/soprano-smm/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
     <!-- Основные SEO-метатеги -->
     <title>Soprano SMM — продвижение в Telegram: инвайтинг, рассылки, боты, аккаунты</title>
@@ -19,9 +19,8 @@
     <link rel="canonical" href="https://domain.com/">
 
     <!-- Favicons & PWA basics -->
-    <link rel="icon" type="image/png" href="/images/blood_drop.png" sizes="32x32">
-    <link rel="icon" type="image/svg+xml" href="/images/blood_drop.svg">
-    <link rel="apple-touch-icon" href="/images/blood_drop.png">
+    <link rel="icon" type="image/png" href="images/blood_drop.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="images/blood_drop.png">
     <meta name="theme-color" content="#8B0000">
 
     <!-- Preconnects & preload (ускоряем загрузку) -->
@@ -32,7 +31,7 @@
 
     <!-- Стили и swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css?v=2.0">
+    <link rel="stylesheet" href="css/style.css?v=2.1">
 
     <!-- Open Graph (Facebook, LinkedIn, VK, Telegram и др.) -->
     <meta property="og:title" content="Soprano SMM — продвижение Telegram каналов и чатов">
@@ -645,6 +644,6 @@
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/script.js?v=2.0"></script>
+    <script src="js/script.js?v=2.1"></script>
 </body>
 </html>
